# FourierDataAnalysis

./: .gitignore  .gitmodules  ;  GEMINI.md  README.md  custom_commands.typ  main.typ  related-work-survey.md
experiments/: .gitignore  README.md  modal_app.py  modal_argl.py  modal_distill.py  modal_fourier_noun.py  modal_gl.py  modal_gpu.py  part2_protocol.json  pyproject.toml
experiments/canonical/: README.md  demo.py  diag_gltree.py  pure_gl.py  pyproject.toml  qary_lsh_dataset_gl.py  run_f16_pipeline.sh  test_qary_lsh_dataset_gl.py
experiments/conf/: config.yaml
experiments/docs/: audit_findings.md  bpe_gl_findings.md  gl_real_findings.md  gl_scale_findings.md  interaction_findings.md  qary_gl_findings.md  sample_efficiency_findings.md
experiments/edu_gl/: README.md  edu_gl.py  edu_gl_csamp.py  pyproject.toml  test_edu_gl.py  test_edu_gl_csamp.py
experiments/fda_exp/: __init__.py  affine_sft.py  argl.py  audit.py  basis_compare.py  bpe.py  bpe_lm.py  cli.py  context_gl.py  context_profile.py  datasets.py  degree.py  distill_data.py  distill_lm.py  dna_data.py  dna_topk.py  fast_gl.py  figures.py  fitness_data.py  fourier_noun.py  gl_predict.py  gl_real.py  gl_scale_predict.py  gl_torch.py  hadamard_gl.py  hf_data.py  householder.py  interaction_gl.py  interaction_predict.py  predict.py  protein_data.py  qary_gl.py  qary_gl_predict.py  qwen_argl.py  repeat_data.py  sample_efficiency.py  scale_experiment.py  sparsity.py  spectrum.py
experiments/fourier_kiss/: README.md  __init__.py  modal_pursuit.py  modal_rescue.py  modal_train.py  model.py  pursuit.py  rescue.py  test_model.py  test_pursuit.py
experiments/tests/: test_argl.py  (+12 more)
(+71 files in other folders)
