[project]
name = "fda-exp"
version = "0.1.0"
description = "Experiments for 'Fourier Analysis on a Dataset': context profile (E2) and on-dataset vs global degree (E5)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "hydra-core>=1.3",
    "scikit-learn>=1.3",
    "pytest>=7.0",
    "pyarrow>=24.0.0",
    "modal>=1.5.1",
    "torch>=2.13.0",
]

[project.optional-dependencies]
uci = ["ucimlrepo>=0.0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fda_exp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
