[project]
name = "canonical-qary-lsh-gl"
version = "0.1.0"
description = "Canonical q-ary Dataset GL over sign-LSH token codes (isolated, single-module)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.5",
    "transformers>=5.13.1",
    "accelerate>=1.2",
    "datasets>=4.0",
    "modal>=1.5.1",
    "pytest>=7.0",
    "safetensors",
    "sentencepiece",
]

[tool.pytest.ini_options]
testpaths = ["."]
