[project]
name = "edu-gl"
version = "0.1.0"
description = "Dataset-GL compression of a scalar target (fineweb-edu-classifier) into a sparse Fourier model."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.5",
    "transformers>=4.56",
    "datasets>=4.0",
    "modal>=1.5.1",
    "wandb>=0.18",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
